--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,89 @@
-* {
+*{
+    font-family: "Roboto", sans-serif !important;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style-type: none;
 }
+
+body {
+    background: #2E2E47;
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+.container {
+    margin: 0 10%;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 15px 0;
+}
+
+.logo {
+    text-align: center;
+}
+
+.logo p {
+    font-size: 0.6rem;
+    margin-top: 0;
+}
+
+nav ul{
+    display: flex;
+    flex-direction: row;
+}
+
+nav ul li {
+    padding: 10px 20px;
+}
+
+nav ul li:hover {
+    background: rgb(119, 119, 119);
+}
+
+
+.welcome {
+    margin: 8% 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+    .welcome .title-welcome {
+        display: flex;
+        align-items:flex-start;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 50%;
+    }
+
+        .title-welcome h1 {
+            font-size: 4rem;
+            font-weight: 700;
+            background-image: linear-gradient(180deg, rgba(225,149,254,1) 15%, rgba(0,207,255,1) 79%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .title-welcome h3 {
+            font-size: 1rem;
+            font-weight: 300;
+        }
+
+    .img-welcome {
+        display: flex;
+        align-items: center;
+        width: 50%;
+    }
+    .img-welcome img{
+        margin-top: -130px;
+        width: 80%;
+    }
