--- a/styles/home.css
+++ b/styles/home.css
@@ -1,23 +1,30 @@
-*{
-    font-family: "Roboto", sans-serif !important;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style-type: none;
+section {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
 }
 
-body {
-    background: #2E2E47;
+section::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 100vh;
+    height: 100vh;
+    background: rgb(0,0,255);
+    background: linear-gradient(90deg, rgb(25, 27, 171) 45%, rgb(94, 118, 239) 56%, rgb(25, 27, 171) 69%);
+    border-radius: 50%;
+    transform-origin: bottom;
+    transform: translateX(-50%) scale(10);
+    margin-bottom: 80px;
+}
+
+section .home {
+    position: relative;
+    z-index: 1;
+    text-align: center;
     color: white;
-}
-
-a {
-    color: white;
-}
-
-.container {
-    margin: 0 10%;
-}
+} 
 
 header {
     display: flex;
@@ -48,9 +55,8 @@ nav ul li:hover {
     background: rgb(119, 119, 119);
 }
 
-
 .welcome {
-    margin: 8% 0;
+    margin: 8% 0 2% 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -58,7 +64,7 @@ nav ul li:hover {
 
     .welcome .title-welcome {
         display: flex;
-        align-items:flex-start;
+        text-align: left;
         flex-wrap: wrap;
         flex-direction: column;
         width: 50%;
@@ -67,7 +73,7 @@ nav ul li:hover {
         .title-welcome h1 {
             font-size: 4rem;
             font-weight: 700;
-            background-image: linear-gradient(180deg, rgba(225,149,254,1) 15%, rgba(0,207,255,1) 79%);
+            background-image: linear-gradient(180deg, rgb(199, 108, 236) 15%, rgb(0, 225, 255) 79%);
             background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
