--- a/styles/cursos.css
+++ b/styles/cursos.css
@@ -15,6 +15,7 @@
 .cursos-body {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     text-align: justify;
 }
