--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: white;
     color: black;
@@ -26,6 +30,28 @@ a {
     text-align: center;
 }
 
+#back-to-top {
+    position: fixed;
+    bottom: 30px;
+    right: 50px;
+    text-align: center;
+    cursor: pointer;
+}
 
+#back-to-top button {
+    border-radius: 100%;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+    margin-bottom: 5px ;
+    background-color: rgb(0,0,255);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
 
-
+#back-to-top p {
+    color: rgb(0,0,255);
+    font-weight: 500;
+}
