--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,8 +41,8 @@ a {
 #back-to-top button {
     border-radius: 100%;
     padding: 5px;
-    width: 50px;
-    height: 50px;
+    width: 2rem;
+    height: 2rem;
     text-decoration: none;
     margin-bottom: 5px ;
     background-color: rgb(0,0,255);
@@ -54,4 +54,28 @@ a {
 #back-to-top p {
     color: rgb(0,0,255);
     font-weight: 500;
+}
+
+@media (max-width: 720px) { 
+    #back-to-top {
+        gap: 1rem;
+        background: rgb(5, 5, 154);
+        color: white;
+        padding: 10px;
+        border-radius: 20px;
+        bottom: 35%;
+        right: 10px;
+        box-shadow: 0px 0px 10px white;
+        font-size: 0.8rem;
+        z-index: 1;
+    }
+
+    #back-to-top button {
+        background: white;
+        color: rgb(5, 5, 154);
+    }
+
+    #back-to-top p {
+        color: white;
+    }
 }
